rspec-tools/tests/resources/invalid-rules/S200/abap/rule.adoc
== Why is this an issue?
== How to fix it
== How to fix it in Express.js
// Using both "How to fix it" and "How to fix it in {framework}" is not allowed
== Resources
